# Transfer-Learning

./: README.md  pyproject.toml
src/transfer_learning/: default.py  feature_extraction.py  image_indexing.py  image_preprocessing.py  utils.py
tests/: test_feature_extraction.py
